--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ nav {
 
 nav h1 {
   padding-left: 1rem;
+  font-weight: bold;
 }
 
 .movieList {
@@ -39,7 +40,8 @@ nav h1 {
   border-style: solid;
   border-radius: 2px;
   border-color: white;
-  width: 262px;
+  width: 300px;
+  height: 180px;
   padding: 1em;
 }
 
